--- a/Salesprediction (1).ipynb
+++ b/Salesprediction (1).ipynb
@@ -19,14 +19,18 @@
       "source": [
         "OSAIS INFOBYTE\n",
         "\n",
-       ]
-   "metadata": {
+        "TASK NO:5 SALES PRICE PREDICTION\n",
+        "\n",
+        "NAME:BHARATH S"
+      ],
+      "metadata": {
         "id": "_lmO9X8fZmkf"
+      }
     },
     {
       "cell_type": "markdown",
       "source": [
-        "**TASK-5:SALES PREDICTION USING PYTHON**"
+        "**TASK-4:SALES PREDICTION USING PYTHON**"
       ],
       "metadata": {
         "id": "sliHoSGz9Epq"
