--- a/Salesprediction (1).ipynb
+++ b/Salesprediction (1).ipynb
@@ -17,11 +17,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "OSAIS INFOBYTE\n",
+        "**OSAIS INFOBYTE**\n",
         "\n",
-        "TASK NO:5 SALES PRICE PREDICTION\n",
+        "DATA SCIENCE INTERNSHIP\n",
         "\n",
-        "NAME:BHARATH S"
       ],
       "metadata": {
         "id": "_lmO9X8fZmkf"
@@ -30,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**TASK-4:SALES PREDICTION USING PYTHON**"
+        "**TASK-5:SALES PREDICTION USING PYTHON**"
       ],
       "metadata": {
         "id": "sliHoSGz9Epq"
