--- a/Salesprediction (2).ipynb
+++ b/Salesprediction (2).ipynb
@@ -17,7 +17,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**OSAIS INFOBYTE**\n",
+        "**OASIS INFOBYTE**\n",
         "\n",
         "DATA SCIENCE INTERNSHIP\n",
         "\n",
